src/test/parse-fail/match-arrows-block-then-binop.rs
// compile-flags: -Z parse-only

fn main() {

    match 0 {
      0 => {
      } + 5 //~ ERROR expected pattern, found `+`
    }
}
